--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.13",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
+    "@vitejs/plugin-react": "^5.0.2",
     "typescript": "~5.8.3",
     "vite": "^7.1.2",
     "vite-plugin-wasm": "^3.5.0"
@@ -17,6 +21,8 @@
     "@automerge/automerge-repo": "^2.2.0",
     "@automerge/automerge-repo-network-websocket": "^2.2.0",
     "@automerge/automerge-repo-react-hooks": "^2.2.0",
-    "@automerge/automerge-repo-storage-indexeddb": "^2.2.0"
+    "@automerge/automerge-repo-storage-indexeddb": "^2.2.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   }
 }
