--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@automerge/automerge-repo-network-websocket": "^2.2.0",
     "@automerge/automerge-repo-react-hooks": "^2.2.0",
     "@automerge/automerge-repo-storage-indexeddb": "^2.2.0",
+    "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   }
